<resources>
    <string name="app_name">ToDoApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setting">Setting</string>
    <string name="json_host">URL of TODO App. server</string>
    <string name="api_token">API Token</string>
    <string name="menu_done">Done</string>
    <string name="menu_cancel">Cancel</string>
    <string name="setting_changed">Settings have been changed</string>
    <string name="setting_not_changed">Settings have NOT been changed</string>
    <string name="title_activity_detail">Detail</string>
    <string name="menu_edit">Edit</string>
    <string name="title_activity_edit">Edit</string>

    <string name="todo_text">task</string>
    <string name="todo_deadline">deadline (XXXX-XX-XX)</string>
    <string name="todo_priority">priority (1: high, 5: low)</string>
    <string name="todo_radio_priority_1">1</string>
    <string name="todo_radio_priority_2">2</string>
    <string name="todo_radio_priority_3">3</string>
    <string name="todo_radio_priority_4">4</string>
    <string name="todo_radio_priority_5">5</string>
    <string name="todo_done">done</string>
    <string name="todo_memo">memo</string>

    <string name="msg_invalid_url">configured URL looks invalid</string>
    <string name="msg_nodeadline">no deadline</string>
    <string name="msg_empty_todo">title of TODO is mandatory</string>
    <string name="msg_new_todo_registerd">new TODO item has been registered</string>
    <string name="msg_fail_new_todo_registered">failed to register new TODO</string>
    <string name="msg_fail_get_todos">failed to obtain TODOs</string>
    <string name="msg_invalid_date_string">invalid string for deadline</string>
    <string name="image_desc_deadline_calendar">calendar</string>
</resources>
